--- a/templates/login.html
+++ b/templates/login.html
@@ -14,8 +14,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script>
         function post_login() {
-            var nm = $('#username').val()
-            var pw = $('#password').val()
+            var nm = $('#username').val();
+            var pw = $('#password').val();
         }
     </script>
 </html>
