회원가입 구현

--- a/templates/login.html
+++ b/templates/login.html
@@ -16,6 +16,23 @@
         function post_login() {
             var nm = $('#username').val();
             var pw = $('#password').val();
+            $.ajax({
+                type: 'GET',
+                url: 'http://localhost:5040/api/sample',
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader("Content-type","application/json");
+                    //xhr.setRequestHeader("Authorization","JWT " + token);
+                },
+                success: function (response) {
+                    console.log(response)
+                },
+                error: function(xhr, exception) {
+                    console.log("error > xhr.status:" + xhr.status + "error > exception: " + exception);
+                },
+                complete: function(response, status, xhr) {
+                    console.log(response);
+                }
+            });
         }
     </script>
 </html>
