--- a/templates/register_user.html
+++ b/templates/register_user.html
@@ -28,7 +28,7 @@
             <button type="button" onclick="post_register()">register</button>
         </div>
     </body>
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script>
         function post_register() {
             var userid = $('#userid').val();
