--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,7 @@
         PW <input type="password" id="password" name="password" >
         <button type="button" onclick="post_login()">login</button>
         <button type="button" onclick="location.href='/login/register'">register</button>
+        <button type="button" onclick="get_userinfo()">get_userinfo</button>
     </body>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
@@ -31,6 +32,7 @@
                     if(resultCode == 200)
                     {
                         $.cookie('token', resultMsg);
+                        alert("login!")
                         // 키로 사용한 이름으로 값을 읽습니다. 
                         // 키로 저장된 값이 없으면 undefined 가 반환됩니다. $.cookie('name'); // => "value"
                     }
@@ -46,6 +48,47 @@
                     console.log(response);
                 }
             });
+        }
+
+        function get_userinfo(){
+            var token = $.cookie('token');
+            if(token == undefined)
+            {
+                alert("not token")
+            }
+            else
+            {
+                $.ajax({
+                type: 'GET',
+                url: 'http://localhost:5040/api/user',
+                beforeSend: function (xhr) {
+                     xhr.setRequestHeader("Content-type","application/json");
+                     xhr.setRequestHeader("Authorization",token);
+                },
+                success: function (response) {
+                    var resultCode = response['resultCode'];
+                    var resultMsg = response['resultMsg'];
+                    if(resultCode == 200)
+                    {
+                        alert(resultMsg);
+                    }
+                },
+                error: function(xhr, exception) {
+                    console.log("error_status : " + xhr.status);
+                    console.log("error_Msg : " + xhr.responseText);
+                    var err = JSON.parse(xhr.responseText);
+                    console.log("error_resultCode : " + err['resultCode'])
+                    if(err['resultCode'] == 406)
+                    {
+                        alert(err['resultMsg']);
+                        $.removeCookie('token');
+                    }
+                },
+                complete: function(response, status, xhr) {
+                    console.log(response);
+                }
+            });
+            }
         }
     </script>
 </html>
