--- a/templates/register_user.html
+++ b/templates/register_user.html
@@ -53,7 +53,7 @@
                 success: function (response) {
                     var msg = response['resultMsg']
                     alert(msg)
-                    window.location.href = "/login"
+                    window.location.href = "/index"
                 },
                 error: function(xhr, exception) {
                     console.log("error_status : " + xhr.status);
