--- a/templates/board.html
+++ b/templates/board.html
@@ -1,5 +1,13 @@
 {% extends 'layout.html' %}
 
+{% block head %}
+{{ super() }}
+{% endblock %}
+
 {% block content %}
 작업해야함
+{% endblock %}
+
+{% block extend %}
+{{ super() }}
 {% endblock %}
