--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
 
         function logout(){
             sessionStorage.removeItem('token');
-            location.reload();
+            window.location.href = "/index"
         }      
         
         function check_token()
