--- a/templates/board.html
+++ b/templates/board.html
@@ -10,31 +10,33 @@
 <div style="width:1000px;">
     <div style="float: right; margin-bottom: 10px;">
        <select id="SearchType" name="SearchType">
-          <option value="title">title</option>
-          <option value="contents">contents</option>
-          <option value="id">id</option>
+          <option value="title">제목</option>
+          <option value="content">내용</option>
+          <option value="writer">작성자</option>
        </select>
        <input type="text" id="SearchText" name="SearchText" />
-       <input type="button" id="SearchBtn" name="SearchBtn" value="Search" class="btn"/>
-       <input type="button" id="WriteBtn" name="WriteBtn" value="Write" class="btn"/>
+       <input type="button" id="SearchBtn" name="SearchBtn" value="Search" onclick="onclick_search();" class="btn"/>
+       <input type="button" id="WriteBtn" name="WriteBtn" value="Write" onclick="onclick_write();" class="btn"/>
     </div>
     <div>
        <table style="width:100%;">
           <colgroup>
-             <col width="10%;">
+             <col width="5%;">
              <col width="20%;">
              <col width="45%;">
              <col width="10%;">
-             <col width="15%;">
+             <col width="20%;">
           </colgroup>
-          <tbody id="list">
-             <tr style="background-color:lightseagreen;">
+          <tbody>
+            <tr style="background-color:lightseagreen;">
                 <th></th>
                 <th>제목</th>
-                <th>네용</th>
-                <th>아이디</th>
+                <th>내용</th>
+                <th>작성자</th>
                 <th>날짜</th>
              </tr>
+          </tbody>
+          <tbody id="list">             
              <!-- <tr>
                 <td>1</td>
                 <td>제목테스트</td>
@@ -51,9 +53,21 @@
 {% block extent %}
     {{ super() }}
     <script>
-        get_board_list()
+        get_board_list('/board/-1')
 
-        function get_board_list()
+        function clear_tr()
+        {
+            var $table = document.getElementById('list');
+            if ($table.rows.length > 0)
+            {
+                for(let i=0; i <= $table.rows.length; i++)
+                { 
+                    $table.deleteRow(-1); 
+                }
+            }
+        }
+
+        function get_board_list(uri)
         {
             var token = sessionStorage.getItem('token');
             if(token == undefined)
@@ -62,9 +76,10 @@
             }
             else
             {
+                clear_tr();
                 $.ajax({
                 type: 'GET',
-                url: api.url + '/board/-1',
+                url: api.url + uri,
                 beforeSend: function (xhr) {
                     xhr.setRequestHeader("Content-type","application/json");
                     xhr.setRequestHeader("Authorization",token);
@@ -76,42 +91,46 @@
                     {   
                         for (var i = 0; i < resultMsg.length; i++)
                         {
-                            var tr = $("<tr></tr>").attr("data-id", "test").appendTo("#list");
+                            var tr = $("<tr></tr>").attr("id", resultMsg[i].id).appendTo("#list");
                             //tr에 td테이블 추가 및 클래스 추가 + 텍스트 수정
                             //$("<td></td>").text("a").addClass("view_btn").appendTo(tr);
                             $("<td></td>").text(i+1).appendTo(tr);
                             $("<td></td>").text(resultMsg[i].title).appendTo(tr);
                             $("<td></td>").text(resultMsg[i].content).appendTo(tr);
                             $("<td></td>").text(resultMsg[i].writer).appendTo(tr);
-                            var dt = Date.parse(resultMsg[i].create_at)
+                            var dt = Date.parse(resultMsg[i].update_at)
                             var date = new Date(dt)
                             var year = date.getFullYear().toString()
-                            var month = date.getMonth().toString()
-                            var day = date.getDay().toString()
-                            var hour = date.getHours().toString()
-                            var minutes = date.getMinutes().toString()
-                            var second = date.getSeconds().toString()
+                            var month = date.getMonth().toString().padStart(2,'0')
+                            var day = date.getDay().toString().padStart(2,'0')
+                            var hour = date.getHours().toString().padStart(2,'0')
+                            var minutes = date.getMinutes().toString().padStart(2,'0')
+                            var second = date.getSeconds().toString().padStart(2,'0')
                             $("<td></td>").text(year+'-'+month+'-'+day+' '+hour+':'+minutes+':'+second).appendTo(tr);
                         }
                     }
                 },
                 error: function(xhr, exception) {
-                    console.log("error_status : " + xhr.status);
-                    console.log("error_Msg : " + xhr.responseText);
-                    var err = JSON.parse(xhr.responseText);
-                    console.log("error_resultCode : " + err['resultCode'])
-                    alert(err['resultMsg']);
-                    if(err['resultCode'] == 406 || err['resultCode'] == 401)
-                    {
-                        sessionStorage.removeItem('token');
-                        window.location.href = "/index"
-                    }
+                    CommonErros(xhr, exception)
                 },
                 complete: function(response, status, xhr) {
                     console.log(response);
                 }
             });
             }
+        }
+
+        function onclick_search()
+        {
+            var selectOption = document.getElementById("SearchType");
+            var selectVal = selectOption.options[selectOption.selectedIndex].value;
+            var search = $('#SearchText').val();
+            get_board_list("/board/"+selectVal+"/"+search)
+        }
+
+        function onclick_write()
+        {
+            window.location.href = "/board_add"
         }
     </script>
 {% endblock %}
